--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1",
+    "slugify": "^1.6.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/node": "^17.0.32",
     "@types/react": "^18.0.9",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "^4.6.4",
-    "@types/firebase": "^3.2.1"
+    "typescript": "^4.6.4"
   }
 }
