--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "firebase": "^9.8.1",
+    "firebase-admin": "^10.2.0",
     "framer-motion": "^6",
     "next": "12.1.6",
     "react": "18.1.0",
