--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "date-fns": "^2.28.0",
     "firebase": "^9.8.1",
     "firebase-admin": "^10.2.0",
     "framer-motion": "^6",
@@ -20,6 +21,7 @@
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
     "slugify": "^1.6.5",
+    "swr": "^1.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
