--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.8.1",
     "firebase-admin": "^10.2.0",
     "framer-motion": "^6",
+    "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.32",
     "@types/react": "^18.0.9",
     "@types/uuid": "^8.3.4",
