--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.0",
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@supabase/supabase-js": "^1.35.3",
     "date-fns": "^2.28.0",
-    "firebase": "^9.8.1",
-    "firebase-admin": "^10.2.0",
     "framer-motion": "^6",
+    "fs": "^0.0.1-security",
     "js-cookie": "^3.0.1",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
     "slugify": "^1.6.5",
+    "supabase": "^0.5.0",
     "swr": "^1.3.0",
     "uuid": "^8.3.2"
   },
