--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs": "^0.0.1-security",
     "js-cookie": "^3.0.1",
     "next": "12.1.6",
+    "pino-logflare": "^0.3.12",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.1",
